# esve

./: .gitignore  LICENSE  Makefile  Makefile.defs.in  Makefile.defs.mingw  README  configure.in
apps/: Makefile
apps/hopfviewer/: Makefile  Torus.cxx  Torus.hxx  Torus_Controller.cxx  Torus_Controller.hxx  Torus_Mod.cxx  Torus_Mod.hxx  UI.cxx  UI.hxx  UI_Emitter.hxx  UI_Handler.hxx  Viewer.cxx  Viewer.hxx  torus_func.hxx
apps/hopfviewer/help/: help_text.cxx  help_text.hxx  help_text.txt
apps/polynomialviewer/: Makefile  Plane.cxx  Plane.hxx  Polynomial_Surface.cxx  Polynomial_Surface.hxx  UI.cxx  UI.hxx  UI_Emitter.hxx  UI_Handler.hxx  Viewer.cxx  Viewer.hxx  main.cxx
apps/polynomialviewer/help/: help_text.cxx  help_text.hxx  help_text.txt
apps/topeviewer/: Makefile  Tope.cxx  Tope.hxx  Tope_File.cxx  Tope_File.hxx  Tope_Geom.cxx  Tope_Geom.hxx  Tope_Mod.cxx  Tope_Mod.hxx  Tube.cxx  Tube.hxx  UI.cxx  UI.hxx  Viewer.cxx  Viewer.hxx  main.cxx
apps/topeviewer/data/: 120-cell.v  16-cell.v  24-cell.v  600-cell.v  8-cell.v  min20.v  min45.v  tetra-truncated-dodecatope.v
apps/topeviewer/help/: help_text.cxx  help_text.hxx  help_text.txt
apps/topeviewer/readers/: Default_Reader.cxx  Default_Reader.hxx  Evolver_Reader.cxx  Evolver_Reader.hxx  Line_Oriented_Reader.cxx  Line_Oriented_Reader.hxx  README  Tope_Reader.cxx  Tope_Reader.hxx  Universal_Reader.cxx  Universal_Reader.hxx  V_Reader.cxx  V_Reader.hxx
documentation/: README.4d  README.bugs  README.c++-style  README.esve  README.hacking  README.hook  README.hopfviewer  README.monomial  README.structure  README.surfaces  README.topeviewer  README.tutorials  index.html
esve/: Makefile
esve/base/dim3/: Transform.hxx  Transform.template.cxx  transform_util.hxx  transform_util.template.cxx
esve/base/dim4/: Transform.hxx  Transform.template.cxx  transform_util.hxx  transform_util.template.cxx
esve/base/dimn/: Frame.hxx  Frame.template.cxx  rgba.hxx  rgba.template.cxx
esve/components/dim3/: Camera.cxx  Camera.hxx  Clipping_Plane.cxx  Clipping_Plane.hxx  Keyboard_Rotation_Handler.cxx  Keyboard_Rotation_Handler.hxx  Min_Z.cxx  Min_Z.hxx  Motion_Frame.cxx  Motion_Frame.hxx  Oriented_Rotation_Handler.cxx  Oriented_Rotation_Handler.hxx  Rotation_Handler.cxx  Rotation_Handler.hxx  Z_Clipper.cxx  Z_Clipper.hxx
esve/components/dim4/: Motion_Frame.cxx  Motion_Frame.hxx  Report_Min_Z.hxx  Report_Min_Z.template.cxx  Rotation_Handler.cxx  Rotation_Handler.hxx  Simple_Rotation_Handler.cxx  Simple_Rotation_Handler.hxx
esve/components/dimn/: Check_Error.cxx  Check_Error.hxx  Command_Line.cxx  Command_Line.hxx  Differential_Motion_Handler.hxx  Differential_Motion_Handler.template.cxx  Draw_Compiler.cxx  Draw_Compiler.hxx  Draw_Tree_impl.cxx  Draw_Tree_impl.hxx  Inertial_Motion_Handler.cxx  Inertial_Motion_Handler.hxx  Make_Compute_Receiver.hxx  Make_Compute_Receiver.template.cxx  Make_Draw_Receiver.hxx  Make_Draw_Receiver.template.cxx  Make_Update_Receiver.hxx  Make_Update_Receiver.template.cxx  Motion_Handler.cxx  Motion_Handler.hxx  (+21 more)
esve/gl/: gl.hxx  glu.hxx
esve/kernel/: Async_Update_Server.cxx  Async_Update_Server.hxx  Caching_Node.cxx  Caching_Node.hxx  Caching_Server.cxx  Caching_Server.hxx  Catcher.cxx  Catcher.hxx  Driver.cxx  Driver_Emitter.hxx  Driver_Handler.hxx  Emitter.cxx  Emitter.hxx  Handler.cxx  Handler.hxx  Kernel_Node.cxx  Kernel_Node.hxx  Main_Driver.hxx  Simple_Kernel.cxx  Simple_Kernel.hxx  Simple_Kernel_Stowed.cxx  Simple_Kernel_Stowed.hxx  Simple_Kernel_impl.cxx  Simple_Kernel_impl.hxx  Sync_Update_Sender.cxx  Sync_Update_Sender.hxx  Sync_Update_Server.cxx  Sync_Update_Server.hxx  Wake_State.cxx  Wake_State_Emitter.hxx  Wake_State_Handler.hxx  Wake_State_Server.cxx  Wake_State_Server.hxx
esve/math/: complex.hxx  constants.hxx  matrix_2h.hxx  misc.hxx  moebius.hxx  quat.hxx
esve/message/: Active_State.cxx  Active_State.hxx  Compute_Node.cxx  Compute_Node.hxx  Compute_Receiver.cxx  Compute_Receiver.hxx  Compute_Receiver_Stowed.cxx  Compute_Receiver_Stowed.hxx  Compute_Sender.cxx  Compute_Sender.hxx  Compute_Sender_Delegator.cxx  Compute_Sender_Delegator.hxx  Compute_Sender_Stowed.cxx  Compute_Sender_Stowed.hxx  Draw_Node.cxx  Draw_Node.hxx  Draw_Receiver.cxx  Draw_Receiver.hxx  Draw_Receiver_Stowed.cxx  Draw_Receiver_Stowed.hxx  Draw_Sender.cxx  Draw_Sender.hxx  Draw_Sender_Delegator.cxx  Draw_Sender_Delegator.hxx  Draw_Sender_Stowed.cxx  Draw_Sender_Stowed.hxx  Handle_Args.cxx  Handle_Args.hxx  Handle_Node.cxx  Handle_Node.hxx  Handle_Node_Cache.cxx  Handle_Node_Cache.hxx  Handle_Receiver.cxx  Handle_Receiver.hxx  Handle_Receiver_Stowed.cxx  Handle_Receiver_Stowed.hxx  Handle_Sender.cxx  Handle_Sender.hxx  Handle_Sender_Delegator.cxx  Handle_Sender_Delegator.hxx  (+27 more)
esve/tree/: compute.hxx  event.hxx  generator.hxx  generic.cxx  generic.hxx  render.hxx  tick.hxx  update.hxx
esve/types/: Constants.cxx  Constants.hxx  complex.hxx  pure.hxx  quat.hxx  real.hxx  rgba.hxx
esve/util/: Command_Line.cxx  Command_Line.hxx  MP_Tree.hxx  Noncopyable.hxx  SP_Tree.hxx  array.hxx  auto_ptr_list.hxx  auto_ptr_vector.hxx  crosstime.cxx  crosstime.hxx  member_iterator.hxx  misc.hxx
examples/: Makefile
examples/basic/: Makefile
examples/monomial/: Makefile  monomial.cxx
examples/poles/: Makefile  four-poles.patch  poles.cxx
examples/simple3d/: Makefile  simple3d.cxx
examples/simple4d/: Makefile  simple4d.cxx
examples/waves/: Makefile  waves.cxx
make/: Doxyfile  Doxyfile.in  Makefile.exec  Makefile.lib  Makefile.node  Makefile.rules  fltk-win32-drag.patch  frames.rb  help-text.rb  message-modify.patch  message.rb  specs.rb  topeviewer-data.rb  viewers-modify.patch  viewers.rb  warnings  warnings-filter.sh
platform/: Makefile
test/: Makefile  common.hxx  test.cxx  test_complex.cxx  test_moebius.cxx  test_quat.cxx
(+300 files in other folders)
